@@ -1,3 +1,7 @@
+2020-06-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to bionic, change to derive package and version
+
 2020-05-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
